@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Add -except to import options. This allows you to explicitly not clean a
+    sub. (Dave Rolsky)
 
 0.16      2014-05-27 04:50:22Z (TRIAL RELEASE)
   - Changed the code to no longer _require_ Class::MOP. If your class is not a
